# sample-py-gh-actions

./: .gitignore  pyproject.toml
.github/workflows/: test.yml
my_ml/: main.py
